# gnome-quick-web-apps

./: .gitignore  Cargo.toml  README.md  catalog-info.yaml  flake.nix  justfile  mkdocs.yml
.github/workflows/: ci.yml  release.yml
build-aux/flatpak/: cargo-sources.json  io.github.olafkfreund.QuickWebApps.yml
crates/core/: Cargo.toml
crates/core/src/: adblock.rs  adblock_hosts.txt  badge.rs  drm.rs  handlers.rs  icon.rs  launcher.rs  lib.rs  mailto.rs  manifest.rs  paths.rs  profiles.rs  templates.rs  webapp.rs
crates/manager/: Cargo.toml
crates/manager/src/: editor.rs  main.rs  window.rs
crates/runner/: Cargo.toml
crates/runner/src/: helper.rs  main.rs  osr.rs  widevine.rs
crates/runner/src/app/: mod.rs  simple_app.rs
crates/runner/src/app/simple_handler/: linux.rs  mod.rs
data/: io.github.olafkfreund.QuickWebApps.desktop  io.github.olafkfreund.QuickWebApps.metainfo.xml
docs/: CNAME  index.html  index.md
docs/plans/: 2026-06-02-native-integration-pack-design.md
nix/: hm-module.nix
