[workspace]
resolver = "2"
members = ["crates/core", "crates/manager", "crates/runner"]

[workspace.package]
version = "0.1.9"
edition = "2021"
# Matches the rustc in the Flatpak GNOME SDK (rust-stable extension), so the
# MSRV-aware resolver keeps dependencies buildable there.
rust-version = "1.89"
license = "GPL-3.0-only"
repository = "https://github.com/olafkfreund/gnome-quick-web-apps"
authors = ["olafkfreund <olaf@freundcloud.com>"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
