[package]
name = "gnome-quick-web-apps-runner"
description = "CEF-based runner that opens a single web app in its own window"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "gnome-quick-web-apps-runner"
path = "src/main.rs"

[[bin]]
name = "gnome-quick-web-apps-runner-helper"
path = "src/helper.rs"

[dependencies]
qwa-core = { path = "../core" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Chromium Embedded Framework. Pinned major like cosmic-utils/web-apps.
cef = { version = "145", features = ["linux-x11", "build-util"] }
x11-dl = "2.21"
# open off-scope links in the system browser
open = "5"

# native GNOME window shell hosting CEF's off-screen output (#11/#12).
# cairo comes via gtk::cairo, so no separate cairo crate (avoids version skew).
gtk = { version = "0.9", package = "gtk4", features = ["v4_12"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }

[features]
default = ["linux-x11"]
linux-x11 = ["cef/linux-x11"]
